...
            icon: Container(
                child: CustomIcons.outline('favorite',
                    size: 24, color: ColorStyles.gray4)),
            activeIcon: Container(
                child: CustomIcons.outline('favorite',
                    size: 24, color: ColorStyles.primary100)),
            label: 'Saved',
          ),
          BottomNavigationBarItem(
            icon: Container(
                child: CustomIcons.outline('notification_bing',
                    size: 24, color: ColorStyles.gray4)),
            activeIcon: Container(
...
