...
                  ),
                  SizedBox(
                    width: 243,
                    child: Hero(
                      tag: 'button',
                      child: BigButton(
                        label: 'Start Cooking',
                        hasArrow: true,
                        onPressed: () {
                          context.go('/sign_in');
                        },
                      ),
                    ),
...
