...
                const SizedBox(height: 25),
                SizedBox(
                  width: double.infinity,
                  child: Hero(
                    tag: 'button',
                    child: BigButton(
                        label: 'Sign In',
                        hasArrow: true,
                        onPressed: () {
                          context.go('/home');
                        }),
                  ),
                ),
...
