...
                    height: 40,
                  )
                ],
              ),
              const SizedBox(height: 8),
              TapBar(
                firstTab: 'Ingredients',
                secondTab: 'Procedures',
                onTabSelected: (index) {
                  model.changeTab(index);
                },
              ),
              Builder(
...
